SEO for Home Page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favBig.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Online restaurant ordering system built with React and modern UI"
+    />
+
     <title>Zeus Restaurant</title>
   </head>
   <body>
