--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     />
 
     <title>Zeus Restaurant</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Playpen+Sans+Arabic:wght@300;400;500;600;700&display=swap"
+    <!-- <link
+      href="https://fonts.googleapis.com/css2?family=Playpen+Sans+Arabic:wght@400;700&display=swap"
       rel="stylesheet"
-    />
+    /> -->
   </head>
   <body>
     <div id="root"></div>
